<resources>
    <string name="app_name">真会玩</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send">发送</string>
    <string name="username">FakeChat</string>
    <string name="template">新增模板</string>
    <string name="load_template">加载模板</string>
    <string name="hint_template">输入模板名称</string>
    <string name="tempalte_saved">模板已保存</string>
    <string name="template_warning">请输入模板名称</string>
    <string name="not_support">此界面不支持换背景功能</string>
<string name="fakechat">FakeChat</string>
    <string name="afk_time">在线</string>
    <string name="send_message">发消息...</string>
    <string name="confirm_clear">确定清空所有消息？</string>
    <string name="confirm_clear_title">FakeChat</string>
    <string name="confirm_screenshot">是否截屏？</string>
    <string name="confirm_screenshot_title">FakeChat</string>
    <string name="confirm_purchase">更多功能正在开发中，尽请期待！</string>
    <string name="confirm_purchase_title">FakeChat</string>
    <string name="save_caution">*图片与头像信息将不会保存在模板中</string>
    <string name="about_fakechat">真会玩 FakeChat</string>
    <string name="about">关于</string>
    <string name="about_version">版本号:Beta 1.0</string>
    <string name="about_website">官方网站:www.fakechat.cn</string>
    <string name="about_suggestion">意见与反馈</string>
    <string name="delete">删除</string>
    <string name="get_voice_length">请选择语音时间长度</string>
    <string name="voice_length">长度</string>
    <string name="second">秒</string>
    <string name="camera">拍照</string>
    <string name="gallery">相册</string>
    <string name="text_voice_dialog">长度:1 秒</string>
    <string name="redpau_details">红包详情</string>
    <string name="redpau_securepay">微信安全支付</string>
    <string name="save_template_save">保存</string>
    <string name="ss_saved">截图已保存至</string>
    <string name="share">分享给好友</string>
    <string name="official_website">官方网站:</string>
    <string name="rp_txt1">收到的钱可直接消费</string>
    <string name="rp_txt2">收到的钱可直接用来发红包</string>
    <string name="rp_txt3">可于“钱包-微信红包-我的红包”查看记录</string>
    <string name="rp_txt4">收到的钱可直接提现</string>
    <string name="rp_txt5">收到的钱可用来转账</string>
    <string name="redpau_text_bot1">已存入零钱 , 可直接转账</string>
    <string name="redpau_text_bot2">已存入零钱 , 可直接消费</string>
    <string name="view_lucky_money">查看我的红包记录</string>
    <string name="message">留言</string>
    <string name="yuan">元</string>
    <string name="check_version">检查版本</string>
    <string name="about_banner_ad_unit_id" translatable="false">ca-app-pub-2872827986859972/1147310043</string>
    <string name="options_banner_ad_unit_id" translatable="false">ca-app-pub-2872827986859972/7193843649</string>
    <string name="url_server">http://120.27.30.238/Areas/Content/files/info.xml</string>
    <string name="read">已读</string>
    <string name="text_feedback_dialog">反馈您的建议</string>
    <string name="input_feedback">请在此输入您的建议</string>
    <string name="input_title">请输入标题</string>
    <string name="send_succeed">发送成功</string>
    <string name="new_version">当前已是最新版本</string>
    <string name="get_failed">获取信息失败</string>
    <string name="detected_new_version">检测到新版本</string>
    <string name="download">是否进行下载？</string>
    <string name="dl">下载</string>
    <string name="cancel">取消</string>
    <string name="developBy">由MOOJI团队开发于2015</string>
</resources>
