<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feedback_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_feedback_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/text_feedback_dialog"
        android:gravity="center"
        android:visibility="gone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/feedback_title"

        android:layout_alignRight="@+id/tv_feedback_dialog"
        android:layout_alignEnd="@+id/tv_feedback_dialog"
        android:textColor="#000000"
        android:hint="@string/input_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/feedback_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:hint="@string/input_feedback"
        android:gravity="top" />

    <Button
        android:id="@+id/btn_save_template"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_register_bg"
        android:layout_margin="15dp"
        android:text="@string/send"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:onClick="onClick"
        android:visibility="gone" />
</LinearLayout>
